added solution for day 2 challenge